# ScrabbleC

./: .gitignore  CMakeLists.txt  main.c  models.h  trie.h
generation/: configuration.h  direction.h  generator.c  generator.h  models.c  models.h
utilities/: list.c  list.h
vocabulary/: trie.c  trie.h  trie_factory.c  trie_factory.h  trie_node.c  trie_node.h
